--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "fullstackmern",
   "version": "1.0.0",
   "description": "testPetProjectMERN",
-  "main": "main.jsx",
+  "main": "main.tsx",
   "type": "module",
   "scripts": {
     "client:dev": "vite",
     "server:dev": "nodemon backend/index.js",
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "server:build": "vite build --outDir dist/server --ssr backend/index.js ",
-    "client:build": "vite build",
+    "server:build": "tsc && vite build --outDir dist/server --ssr backend/index.js ",
+    "client:build": "tsc && vite build",
     "build": "npm run server:build && npm run client:build",
     "preview:client": "vite preview --host",
     "preview:server": "node dist/server/index.js",
@@ -49,13 +49,15 @@
     "react-markdown": "^8.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "^5.0.1",
     "react-simplemde-editor": "^5.0.2",
     "sass": "^1.52.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@mui/types": "^7.2.4",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
