configure package json

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "main.tsx",
   "type": "module",
   "scripts": {
-    "client:dev": "vite",
+    "client:dev": "vite --open",
     "server:dev": "nodemon backend/index.js",
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "server:build": "tsc && vite build --outDir dist/server --ssr backend/index.js ",
-    "client:build": "tsc && vite build",
+    "server:build": "tsc && vite build --outDir ../dist/server --ssr ../backend/index.js ",
+    "client:build": "tsc && vite build --outDir ../dist/app",
     "build": "npm run server:build && npm run client:build",
-    "preview:client": "vite preview --host",
+    "preview:client": "vite dist/app preview --open",
     "preview:server": "node dist/server/index.js",
-    "preview": "concurrently \"vite preview --host\" \"node dist/server/index.js\"",
+    "preview": "concurrently \"npm run preview:client\" \"npm run preview:server\"",
     "test": "prettier --check . && eslint . && stylelint \"**/*.css\"",
     "start": "node backend/index.js"
   },
